test/bad/types3.prog
//every element of list needs to have the same type
l = [1 + 2, true | false, ()]
